deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auto-landing-page
  labels:
    app: auto-landing-page
  namespace: auto-landing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auto-landing-page
  template:
    metadata:
      labels:
        app: auto-landing-page
    spec:
      containers:
      - name: auto-landing-page
        image: npx.finditbuy.com/automate/auto-landing-page:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: writable-keys
          mountPath: /app/config/keys
      volumes:
      - name: writable-keys
        emptyDir: {}           
---
apiVersion: v1
kind: Service
metadata:
  name: auto-landing-page
  labels:
    app: auto-landing-page
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: auto-landing-page
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: easy-cook-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "shop.finditbuy.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auto-landing-page-virtualservice
spec:
  hosts:
  - "shop.finditbuy.com"
  gateways:
  - easy-cook-gateway
  http:
  - name: "powerpet"
    match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: auto-landing-page
        port:
          number: 8080
    timeout: 300s
